# virtual-serialport

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: loopback.rs  pair.rs
src/: lib.rs
