[package]
name = "virtual-serialport"
version = "0.1.3"
edition = "2021"
rust-version = "1.59.0"
description = "Simulates serial ports for testing. Designed to work with the `serialport` crate for virtual serial communication."
authors = ["Dmitry Demin <dmitry.demin@outlook.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["serial", "serialport", "rs232", "testing", "simulation"]
repository = "https://github.com/dmidem/virtual-serialport"

[dependencies]
mockpipe = "0.1.6"
rand = "0.8.5"
serialport = "4.5.0"
